--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,57 +17,53 @@
         android:layout_marginRight="34dp"
         app:srcCompat="@drawable/logo"
         tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="100dp" />
+        tools:layout_editor_absoluteY="100dp"/>
 
     <TextView
         android:id="@+id/textView_questionInformation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Descricao"
-        android:paddingLeft="12dp"
-        android:layout_marginTop="12dp"/>
+        android:textSize="16dp"
+        android:text="Saiba a melhor opção de abestecimento do seu carro!"
+        android:textAlignment="center"
+        android:layout_marginTop="26dp"/>
 
-    <TextView
-        android:id="@+id/textView_alcoholCost"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"
-        android:paddingLeft="12dp"
-        android:text="Descricao" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/textView_alcohol"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:paddingLeft="12dp"
-        android:text="Descricao" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textView_alcohol"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:backgroundTint="@color/white"
+            android:hint="Preço álcool ex: 1.90"
+            android:inputType="number"/>
 
-    <TextView
-        android:id="@+id/textView_GasolineCost"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"
-        android:paddingLeft="12dp"
-        android:layout_marginTop="26dp"
-        android:text="Descricao"
-        />
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/textView_Gasoline"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:paddingLeft="12dp"
-        android:text="Descricao"
-        />
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textView_Gasoline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:hint="Preço álcool ex: 2.60"
+            android:backgroundTint="@color/white"
+            android:inputType="number"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/button_calcular"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Calcular" />
+        android:text="Calcular"/>
 
     <TextView
         android:id="@+id/textView_result"
@@ -76,7 +72,6 @@
         android:layout_marginTop="12dp"
         android:textSize="16dp"
         android:textAlignment="center"
-        android:hint="Result"
-        />
+        android:hint="Resultado"/>
 
 </LinearLayout>
