--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
-            android:hint="Preço álcool ex: 2.60"
+            android:hint="Preço Gasolina ex: 2.60"
             android:backgroundTint="@color/white"
             android:inputType="numberDecimal"/>
 
